--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,16 +62,16 @@ jobs:
         - name: Setup APT ${{matrix.arch}}
           if: matrix.target == 'ubuntu-latest'
           run: |
-            sudo dpkg --add-architecture ${{steps.debian.outputs.arch}}
-            sudo apt update
-            sudo apt install git make cmake unzip python3-jinja2 zenity libopenal-dev:${{steps.debian.outputs.arch}} libx11-dev:${{steps.debian.outputs.arch}} libxrandr-dev:${{steps.debian.outputs.arch}} libxinerama-dev:${{steps.debian.outputs.arch}} libxcursor-dev:${{steps.debian.outputs.arch}} libxi-dev:${{steps.debian.outputs.arch}} libgl-dev:${{steps.debian.outputs.arch}} libwayland-dev:${{steps.debian.outputs.arch}} libpulse-dev:${{steps.debian.outputs.arch}} libxkbcommon-dev:${{steps.debian.outputs.arch}} libegl-dev:${{steps.debian.outputs.arch}}
+            dpkg --add-architecture ${{steps.debian.outputs.arch}}
+            apt update
+            apt install git make cmake unzip python3-jinja2 zenity libopenal-dev:${{steps.debian.outputs.arch}} libx11-dev:${{steps.debian.outputs.arch}} libxrandr-dev:${{steps.debian.outputs.arch}} libxinerama-dev:${{steps.debian.outputs.arch}} libxcursor-dev:${{steps.debian.outputs.arch}} libxi-dev:${{steps.debian.outputs.arch}} libgl-dev:${{steps.debian.outputs.arch}} libwayland-dev:${{steps.debian.outputs.arch}} libpulse-dev:${{steps.debian.outputs.arch}} libxkbcommon-dev:${{steps.debian.outputs.arch}} libegl-dev:${{steps.debian.outputs.arch}}
         - name: Install GCC-Multilib
           if: ${{matrix.target == 'ubuntu-latest' && matrix.arch == 'i686'}}
-          run: sudo apt install gcc g++ gcc-multilib g++-multilib
+          run: apt install gcc g++ gcc-multilib g++-multilib
 
         - name: Install GCC-gnueabihf
           if: ${{matrix.target == 'ubuntu-latest' && matrix.arch == 'arm'}}
-          run: sudo apt install gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf
+          run: apt install gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf
 
 
         - name: Build ${{matrix.arch}}-linux
