--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
                   arch: i686
                   out: portable
       runs-on: ${{matrix.target}}
-      container: ${{ (matrix.arch == 'arm' && matrix.target == 'ubuntu-latest') ? 'debian:bookworm' : null }}
+      container: ${{ matrix.arch == 'arm' && matrix.target == 'ubuntu-latest' && 'debian:bookworm' || null }}
       permissions:
         contents: read 
       steps:
