--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
                   arch: i686
                   out: portable
       runs-on: ${{matrix.target}}
-      container: ${{ matrix.arch == 'arm' && matrix.target == 'ubuntu-latest' && 'debian:bookworm' || null }}
+      # container: ${{ matrix.arch == 'arm' && matrix.target == 'ubuntu-latest' && 'debian:bookworm' || null }}
       permissions:
         contents: read 
       steps:
@@ -63,16 +63,16 @@ jobs:
         - name: Setup APT ${{matrix.arch}}
           if: matrix.target == 'ubuntu-latest'
           run: |
-            ${{matrix.arch == 'i686' && 'sudo'}} dpkg --add-architecture ${{steps.debian.outputs.arch}}
-            ${{matrix.arch == 'i686' && 'sudo'}} apt update
-            ${{matrix.arch == 'i686' && 'sudo'}} apt install git make cmake unzip python3-jinja2 zenity libopenal-dev:${{steps.debian.outputs.arch}} libx11-dev:${{steps.debian.outputs.arch}} libxrandr-dev:${{steps.debian.outputs.arch}} libxinerama-dev:${{steps.debian.outputs.arch}} libxcursor-dev:${{steps.debian.outputs.arch}} libxi-dev:${{steps.debian.outputs.arch}} libgl-dev:${{steps.debian.outputs.arch}} libwayland-dev:${{steps.debian.outputs.arch}} libpulse-dev:${{steps.debian.outputs.arch}} libxkbcommon-dev:${{steps.debian.outputs.arch}} libegl-dev:${{steps.debian.outputs.arch}}
+            sudo dpkg --add-architecture ${{steps.debian.outputs.arch}}
+            sudo apt update
+            sudo apt install git make cmake unzip python3-jinja2 zenity libopenal-dev:${{steps.debian.outputs.arch}} libx11-dev:${{steps.debian.outputs.arch}} libxrandr-dev:${{steps.debian.outputs.arch}} libxinerama-dev:${{steps.debian.outputs.arch}} libxcursor-dev:${{steps.debian.outputs.arch}} libxi-dev:${{steps.debian.outputs.arch}} libgl-dev:${{steps.debian.outputs.arch}} libwayland-dev:${{steps.debian.outputs.arch}} libpulse-dev:${{steps.debian.outputs.arch}} libxkbcommon-dev:${{steps.debian.outputs.arch}} libegl-dev:${{steps.debian.outputs.arch}}
         - name: Install GCC-Multilib
           if: ${{matrix.target == 'ubuntu-latest' && matrix.arch == 'i686'}}
-          run: ${{matrix.arch == 'i686' && 'sudo'}} apt install gcc g++ gcc-multilib g++-multilib
+          run: sudo apt install gcc g++ gcc-multilib g++-multilib
 
         - name: Install GCC-gnueabihf
           if: ${{matrix.target == 'ubuntu-latest' && matrix.arch == 'arm'}}
-          run: ${{matrix.arch == 'i686' && 'sudo'}} apt install gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf
+          run: sudo apt install gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf
 
 
         - name: Build ${{matrix.arch}}-linux
