--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,7 +83,7 @@ jobs:
           if: matrix.target == 'windows-latest'
           run:
             | 
-            cmake -B ${{github.workspace}}/build -A Win32 -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DPYTHON_EXECUTABLE=${{steps.python.outputs.python-path}}
+            cmake -B ${{github.workspace}}/build -A Win32 -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} 
             cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
 
