--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -132,7 +132,7 @@ jobs:
         - name: Build Deb
           if: ${{matrix.target == 'ubuntu-latest'  }}
           run: |
-            mkdir -p pkgs/deb/{usr/bin,usr/share/applications,DEBIAN}
+            mkdir -p pkgs/deb/usr/bin
             mkdir -p pkgs/deb/usr/share/applications
             cp build-${{matrix.arch}}/ninecraft/ninecraft pkgs/deb/usr/bin
             cp tools/extract.sh pkgs/pkgs/usr/bin/ninecraft-extract
