--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -100,7 +100,9 @@ jobs:
 
 
         - if: matrix.arch == 'arm'
-          run: git clone http://github.com/MCPI-Revival/Ninecraft . --recursive
+          run: |
+            git clone http://github.com/$GITHUB_REPOSITORY . --recursive
+            git switch $GITHUB_REF_NAME
 
 
         - name: Build ${{matrix.arch}}-linux
