--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -174,6 +174,7 @@ jobs:
           run: |
             cp build-${{matrix.arch}}/ninecraft/ninecraft pkgs/arch
             cd pkgs/arch
+            ${{matrix.arch == 'i686' && 'sudo' || ''}} pacman -Syy
             makepkg -si --nobuild
         # - name: Build Arch Linux package
         #   uses: FFY00/build-arch-package@v1
