--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,7 +81,7 @@ jobs:
           run: |
             ${{matrix.arch == 'i686' && 'sudo' || ''}} dpkg --add-architecture ${{steps.debian.outputs.arch}}
             ${{matrix.arch == 'i686' && 'sudo' || ''}} apt update -y
-            ${{matrix.arch == 'i686' && 'sudo' || ''}} apt install -y file git pacman-package-manager wget make cmake unzip python3-jinja2 zenity libopenal-dev:${{steps.debian.outputs.arch}} libx11-dev:${{steps.debian.outputs.arch}} libxrandr-dev:${{steps.debian.outputs.arch}} libxinerama-dev:${{steps.debian.outputs.arch}} libxcursor-dev:${{steps.debian.outputs.arch}} libxi-dev:${{steps.debian.outputs.arch}} libgl-dev:${{steps.debian.outputs.arch}} libwayland-dev:${{steps.debian.outputs.arch}} libpulse-dev:${{steps.debian.outputs.arch}} libxkbcommon-dev:${{steps.debian.outputs.arch}} libegl-dev:${{steps.debian.outputs.arch}}
+            ${{matrix.arch == 'i686' && 'sudo' || ''}} apt install -y gnupg archlinux-keyring file git pacman-package-manager wget make cmake unzip python3-jinja2 zenity libopenal-dev:${{steps.debian.outputs.arch}} libx11-dev:${{steps.debian.outputs.arch}} libxrandr-dev:${{steps.debian.outputs.arch}} libxinerama-dev:${{steps.debian.outputs.arch}} libxcursor-dev:${{steps.debian.outputs.arch}} libxi-dev:${{steps.debian.outputs.arch}} libgl-dev:${{steps.debian.outputs.arch}} libwayland-dev:${{steps.debian.outputs.arch}} libpulse-dev:${{steps.debian.outputs.arch}} libxkbcommon-dev:${{steps.debian.outputs.arch}} libegl-dev:${{steps.debian.outputs.arch}}
         
         - name: Install GCC-Multilib
           if: ${{matrix.target == 'ubuntu-latest' && matrix.arch == 'i686'}}
@@ -172,6 +172,7 @@ jobs:
         - name: Build Arch pkg
           if: ${{matrix.target == 'ubuntu-latest'  }}
           run: |
+            ${{matrix.arch == 'i686' && 'sudo' || ''}} sh ./pkgs/setup-pacman.sh
             cp build-${{matrix.arch}}/ninecraft/ninecraft pkgs/arch
             cd pkgs/arch
             ${{matrix.arch == 'i686' && 'sudo' || ''}} pacman -Syy
